--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,18 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+@media (max-width: 992px) {
+  #level-title{
+    font-size: 4rem;
+    margin-top: 15%;
+    margin-bottom: 35%;
+  }
+  .row {
+    flex-wrap: nowrap;
+  }
+  .btn {
+    height: 300px;
+    width: 300px;
+  }
+}
